@@ -11,6 +11,12 @@ Package author: Matthew J. Weaver
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-04
+2015-5-21 David Schneider
+- improve plotting of TimeTool results
+- improve examples
+	
+	
 Tag: V00-03-03
 2015-5-19 David Schneider
 - Add option "TimeTool.Analyze.use_calib_db_ref=1" to read reference from 
